--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryLight">#383838</color>
     <color name="colorAccent">#FFB917</color>
     <color name="colorAccentLight">#FFD54F</color>
+    <color name="white">#FFF</color>
 </resources>
